Geometry Nodes: RGB Curve uninitialized alpha #114240

Closed
opened 2023-10-29 03:26:58 +01:00 by Radek Kołakowski · 0 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.23

Blender Version
Broken: version: 3.3.12, branch: master, commit date: 2023-10-17 09:05, hash: 10ade9ceee90
Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: cf1e1ed46b7e
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-27 13:13, hash: b0a032e2eb0a
Worked: non

Short description of error
RGB Curve Node in Geometry Nodes output random values in alpha channel. Mostly zeros or values form 0 to 1, sometimes -0, very large or small values, or "-nan". This bug can be seen by Viewer Node, in Spreadsheet, and if passed by Named Attribute also in render view and renders.

If Color Node is plugged to color input of RGB Curve Node, alpha channel of RGB Curve Node is always 0 regardless of alpha value set in Color Node.

Exact steps for others to reproduce the error
Plug any data like Position, Normal, Curve Tangent etc. to color input of RGB Curve Node and plug it to Viewer Node.
Mute and unmute RGB Curve Node repetedly.
Check alpha chanel (4th column) in Spreadsheet using Viwer Node

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.23 **Blender Version** Broken: version: 3.3.12, branch: master, commit date: 2023-10-17 09:05, hash: `10ade9ceee90` Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: `cf1e1ed46b7e` Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-27 13:13, hash: `b0a032e2eb0a` Worked: non **Short description of error** RGB Curve Node in Geometry Nodes output random values in alpha channel. Mostly zeros or values form 0 to 1, sometimes -0, very large or small values, or "-nan". This bug can be seen by Viewer Node, in Spreadsheet, and if passed by Named Attribute also in render view and renders. If Color Node is plugged to color input of RGB Curve Node, alpha channel of RGB Curve Node is always 0 regardless of alpha value set in Color Node. **Exact steps for others to reproduce the error** Plug any data like Position, Normal, Curve Tangent etc. to color input of RGB Curve Node and plug it to Viewer Node. Mute and unmute RGB Curve Node repetedly. Check alpha chanel (4th column) in Spreadsheet using Viwer Node
Radek Kołakowski added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-10-29 03:26:58 +01:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-10-29 09:59:07 +01:00
Iliya Katushenock changed title from RGB Curve Node alpha channel error in Geometry Nodes to Geometry Nodes: RGB Curve uninitialized alpha 2023-10-30 13:34:30 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-30 22:20:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114240
No description provided.