Fix #114240: Initialize output alpha for RGB color

Pull Request: https://projects.blender.org/blender/blender/pulls/114270